force-app/main/default/objects/AccountAdditionalInfo__c/AccountAdditionalInfo__c.object-meta.xml
<CustomObject>
    <label>Account Additional Info</label>
    <nameField>
        <label>Accoutn Additional Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Additional Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>