force-app/main/default/objects/AccountAdditionalInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Additional Infos</relationshipLabel>
    <relationshipName>Account_Additional_Infos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>