force-app/main/default/objects/AccountAdditionalInfo__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>BUTECH</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>EXTERNAL</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>GAMA DECOR</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>L&apos;ANTIC COLONIAL</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NOKEN</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>PORCELANOSA</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SYSTEM POOL</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>XTONE</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>VENIS</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>URBATEK</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>KRION</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>OTHERS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>