force-app/main/default/objects/AccountAdditionalInfo__c/fields/InfoType__c.field-meta.xml
<CustomField>
    <fullName>InfoType__c</fullName>
    <label>Info type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINANCIAL</fullName>
            </value>
            <value>
                <fullName>PURCHASE</fullName>
            </value>
            <value>
                <fullName>GOAL</fullName>
            </value>
            <value>
                <fullName>QUOTES</fullName>
            </value>
            <value>
                <fullName>INVOICES</fullName>
            </value>
            <value>
                <fullName>ORDERS</fullName>
            </value>
            <value>
                <fullName>WEEKLYCOMMENT</fullName>
            </value>
            <value>
                <fullName>PEDIDOS</fullName>
                <isActive>false</isActive>
                <label>PEDIDOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>