force-app/main/default/objects/AccountAdditionalInfo__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>