force-app/main/default/objects/AccountAdditionalInfo__c/fields/Value3__c.field-meta.xml
<CustomField>
    <fullName>Value3__c</fullName>
    <label>Value 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>